- Reverted wiring multiplexer windows to centralized contexts after regressions.
- Fixed context cloning for the multiplexer.
- Turned off extra contexts to focus on the OpenGL path.
- Fixed OpenGL sprite V orientation.
- Reverted the OpenGL sprite V orientation fix temporarily.
- Reapplied the OpenGL sprite V orientation fix.
- Applied a small rendering patch and updated textures.
- Ensured atlas entry access is thread-safe.
- Restored missing images.
- Updated the README description.
- Documented vcpkg manifest dependencies in the README.
- Updated the README with additional clarifications.
- Updated the README again with further adjustments.
- Updated the README to refine wording and structure.
- Improved README formatting and included a file tree.
- Documented Visual Studio vcpkg integration steps.
- Documented engine configuration switches.
- Emphasized architectural pillars within the README.
- Updated the README after earlier documentation passes.
- Refined multi-context runtime management.
- Reverted the multi-context runtime management refinement after issues.
- Refined the context multiplexer threading spine.
- Applied miscellaneous adjustments and cleanup.
- Fixed the menu button grid layout.
- Corrected Raylib viewport offsets so atlas-driven UI no longer clips or drifts inside letterboxed windows.
- Adjusted the SDL3 renderer to honour the active viewport, keeping GUI overlays centered across aspect ratios.
- Bumped the engine version to v0.60.0 and refreshed the analysis notes with new focus areas.
- Cached Raylib viewport fit data and reused it during sprite draws to remove the remaining atlas clipping regressions.
- Synced SDL3 context dimensions with the renderer output so menu layouts stay centered after window resizes.
- Added a configurable `--menu-columns` cap for the main overlay grid and documented the runtime flag.
- Bumped the engine version to v0.61.0 and updated the engine analysis focus areas.
